deploy/minikube/services/networkpolicy-allow-auth-service.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ingress-allow-auth-service
spec:
  podSelector:
    matchLabels:
      app: xenoblast
      service: auth-service
      component: redis
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: xenoblast
              service: auth-service
      ports:
        - protocol: TCP
          port: 6379
